2009-07-24: Ali aliov@xfce.org
	* Better alignement in the interface file, worked by Josef Havran.

2009-07-22: Ali aliov@xfce.org
	* <!-- interface-requires libxfcegui4 4.6 --> in the interface
	file instead, not sure why glade inserts this 
	<requires lib="xfce4" version="2360.6128"/>  instead! since 
	this will not work on gtk+2.12, however the interface file
	passes the Gtk version check, a glade bug? anyway this might
	fix bug 5599.

2009-07-19: Ali aliov@xfce.org
	* Allow compilation without network manager support, since some
	distros doesn't have it (like Slackware).
	* settings/xfpm-settings.c connect to the signals after settings up all
	the widgets this way we don't get property_changed signals for nothing.
	* Register DBus error code only once at startup to avoid a Metadata
	warning error domain.
	* Update README, NEWS.
	
2009-07-15: Ali aliov@xfce.org
	* Provides the following standard DBus methods:
	CanReboot(),CanShutdown(),Reboot(),GetPowerSaveStatus().
	* src/xfpm-error.{c,h} correct errors name for non 
	supported shutdown/hibernate... .
	to NoHardwareSupported+Invalid cookie to Cookie not found.
	* Update TODO.
	* Update the documentation.

2009-07-09: Ali aliov@xfce.org
	* src/xfpm-xfconf.c fix a bug affecting 0.8.1.* for the properties prefix.
	* src/xfpm-engine.c Fix default idle timeout.
	* prepare 0.8.2.

2009-07-09: Ali aliov@xfce.org
	* settings/xfpm-settings.c automatically switch inactivity sleep mode 
	to hibernate if suspend is not supported.
	* Allow 15 minutes as a minimum value for idle.
	* src/xfpm-dbus-monitor.c Fix regression for detecting when HAL restarts.
	* src/xfpm-brightness-widget.c automatically detect if the running 
	Notification daemon is notify-osd and use its brightness feedback interface for 
	displaying the brightness level.
	* configure.ac.in add 'r' as a prefix for version tag.

2009-07-06 10:00 Ali aliov@xfce.org
	* 0.8.1.1 release.

2009-07-03: 22:00 Ali aliov@xfce.org
	* po/* update po files.
	