@@ -69,17 +69,6 @@
       </row>
     </data>
   </object>
-  <object class="GtkListStore" id="model2">
-    <columns>
-      <!-- column-name gchararray -->
-      <column type="gchararray"/>
-    </columns>
-    <data>
-      <row>
-        <col id="0" translatable="yes">Always show icon</col>
-      </row>
-    </data>
-  </object>
   <object class="GtkListStore" id="model3">
     <columns>
       <!-- column-name gchararray -->
@@ -177,10 +166,8 @@
                     <property name="show_tabs">False</property>
                     <property name="show_border">False</property>
                     <child>
-                      <object class="GtkNotebook" id="general">
+                      <object class="GtkViewport" id="general">
                         <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="show_tabs">False</property>
                         <child>
                           <object class="GtkFrame" id="frame">
                             <property name="visible">True</property>
@@ -190,7 +177,6 @@
                             <child>
                               <object class="GtkAlignment" id="alignment">
                                 <property name="visible">True</property>
-                                <property name="top_padding">3</property>
                                 <property name="left_padding">12</property>
                                 <property name="right_padding">6</property>
                                 <child>
@@ -300,7 +286,6 @@
                                         <child>
                                           <object class="GtkComboBox" id="tray-combox">
                                             <property name="visible">True</property>
-                                            <property name="model">model2</property>
                                             <signal name="changed" handler="set_show_tray_icon_cb"/>
                                             <child>
                                               <object class="GtkCellRendererText" id="renderer2"/>
@@ -375,9 +360,6 @@
                             </child>
                           </object>
                         </child>
-                        <child type="tab">
-                          <placeholder/>
-                        </child>
                       </object>
                     </child>
                     <child type="tab">
@@ -449,7 +431,7 @@
                                           <object class="GtkVBox" id="vbox1">
                                             <property name="visible">True</property>
                                             <property name="orientation">vertical</property>
-                                            <property name="spacing">2</property>
+                                            <property name="spacing">4</property>
                                             <child>
                                               <object class="GtkLabel" id="label9">
                                                 <property name="visible">True</property>
@@ -477,7 +459,6 @@
                                           </object>
                                           <packing>
                                             <property name="expand">False</property>
-                                            <property name="padding">6</property>
                                             <property name="position">1</property>
                                           </packing>
                                         </child>
@@ -514,7 +495,7 @@
                             <property name="visible">True</property>
                             <property name="border_width">12</property>
                             <property name="orientation">vertical</property>
-                            <property name="spacing">6</property>
+                            <property name="spacing">12</property>
                             <child>
                               <object class="GtkFrame" id="dpms-on-ac-frame">
                                 <property name="label_xalign">0</property>
@@ -522,20 +503,19 @@
                                 <child>
                                   <object class="GtkAlignment" id="alignment10">
                                     <property name="visible">True</property>
-                                    <property name="top_padding">12</property>
-                                    <property name="bottom_padding">6</property>
+                                    <property name="top_padding">6</property>
                                     <property name="left_padding">12</property>
                                     <property name="right_padding">6</property>
                                     <child>
                                       <object class="GtkVBox" id="vbox20">
                                         <property name="visible">True</property>
                                         <property name="orientation">vertical</property>
-                                        <property name="spacing">12</property>
+                                        <property name="spacing">6</property>
                                         <child>
                                           <object class="GtkVBox" id="vbox21">
                                             <property name="visible">True</property>
                                             <property name="orientation">vertical</property>
-                                            <property name="spacing">2</property>
+                                            <property name="spacing">4</property>
                                             <child>
                                               <object class="GtkLabel" id="label28">
                                                 <property name="visible">True</property>
@@ -571,7 +551,7 @@
                                           <object class="GtkVBox" id="vbox22">
                                             <property name="visible">True</property>
                                             <property name="orientation">vertical</property>
-                                            <property name="spacing">2</property>
+                                            <property name="spacing">4</property>
                                             <child>
                                               <object class="GtkLabel" id="label29">
                                                 <property name="visible">True</property>
@@ -628,14 +608,14 @@
                                 <child>
                                   <object class="GtkAlignment" id="alignment11">
                                     <property name="visible">True</property>
-                                    <property name="top_padding">12</property>
+                                    <property name="top_padding">6</property>
                                     <property name="left_padding">12</property>
                                     <property name="right_padding">6</property>
                                     <child>
                                       <object class="GtkVBox" id="vbox23">
                                         <property name="visible">True</property>
                                         <property name="orientation">vertical</property>
-                                        <property name="spacing">2</property>
+                                        <property name="spacing">4</property>
                                         <child>
                                           <object class="GtkLabel" id="label31">
                                             <property name="visible">True</property>
@@ -824,7 +804,7 @@
                                           <object class="GtkVBox" id="vbox4">
                                             <property name="visible">True</property>
                                             <property name="orientation">vertical</property>
-                                            <property name="spacing">2</property>
+                                            <property name="spacing">4</property>
                                             <child>
                                               <object class="GtkLabel" id="label6">
                                                 <property name="visible">True</property>
@@ -851,7 +831,6 @@
                                             </child>
                                           </object>
                                           <packing>
-                                            <property name="padding">6</property>
                                             <property name="position">2</property>
                                           </packing>
                                         </child>
@@ -888,7 +867,7 @@
                             <property name="visible">True</property>
                             <property name="border_width">12</property>
                             <property name="orientation">vertical</property>
-                            <property name="spacing">6</property>
+                            <property name="spacing">12</property>
                             <child>
                               <object class="GtkFrame" id="dpms-on-battery-frame">
                                 <property name="label_xalign">0</property>
@@ -896,20 +875,19 @@
                                 <child>
                                   <object class="GtkAlignment" id="alignment13">
                                     <property name="visible">True</property>
-                                    <property name="top_padding">12</property>
-                                    <property name="bottom_padding">6</property>
+                                    <property name="top_padding">6</property>
                                     <property name="left_padding">12</property>
                                     <property name="right_padding">6</property>
                                     <child>
                                       <object class="GtkVBox" id="vbox27">
                                         <property name="visible">True</property>
                                         <property name="orientation">vertical</property>
-                                        <property name="spacing">12</property>
+                                        <property name="spacing">6</property>
                                         <child>
                                           <object class="GtkVBox" id="vbox28">
                                             <property name="visible">True</property>
                                             <property name="orientation">vertical</property>
-                                            <property name="spacing">2</property>
+                                            <property name="spacing">4</property>
                                             <child>
                                               <object class="GtkLabel" id="label36">
                                                 <property name="visible">True</property>
@@ -947,7 +925,7 @@
                                           <object class="GtkVBox" id="vbox29">
                                             <property name="visible">True</property>
                                             <property name="orientation">vertical</property>
-                                            <property name="spacing">2</property>
+                                            <property name="spacing">4</property>
                                             <child>
                                               <object class="GtkLabel" id="label37">
                                                 <property name="visible">True</property>
@@ -1006,14 +984,14 @@
                                 <child>
                                   <object class="GtkAlignment" id="alignment14">
                                     <property name="visible">True</property>
-                                    <property name="top_padding">12</property>
+                                    <property name="top_padding">6</property>
                                     <property name="left_padding">12</property>
                                     <property name="right_padding">6</property>
                                     <child>
                                       <object class="GtkVBox" id="vbox30">
                                         <property name="visible">True</property>
                                         <property name="orientation">vertical</property>
-                                        <property name="spacing">2</property>
+                                        <property name="spacing">4</property>
                                         <child>
                                           <object class="GtkLabel" id="label39">
                                             <property name="visible">True</property>
@@ -1087,10 +1065,8 @@
                       <placeholder/>
                     </child>
                     <child>
-                      <object class="GtkNotebook" id="advanced">
+                      <object class="GtkViewport" id="advanced">
                         <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="show_tabs">False</property>
                         <child>
                           <object class="GtkFrame" id="frame1">
                             <property name="visible">True</property>
@@ -1291,9 +1267,6 @@
                               </object>
                             </child>
                           </object>
-                        </child>
-                        <child type="tab">
-                          <placeholder/>
                         </child>
                       </object>
                       <packing>
