@@ -1,4 +1,4 @@
 Current
 =======
 - Make it possible to compile without network manager support.
-- 
+- Add never show icon to the system tray configuration (bug #5613).
